# VIAM_AUV

./: README.md
launch/: run_auv2000.launch  test_navigator.launch  test_stm_transceiver.launch
src/controller/: CMakeLists.txt
src/controller/include/: controller.h
src/controller/scripts/: motor_driver_py2.py  motor_driver_py3.py  motors_driver.py
src/controller/src/: controller.cpp
src/gcs_transceiver/: CMakeLists.txt
src/gcs_transceiver/include/: command_protocol.h  gcs_transceiver.h  mission_protocol.h  parameter_protocol.h
src/gcs_transceiver/src/: command_protocol.cpp  gcs_transceiver.cpp  mission_protocol.cpp  parameter_protocol.cpp
src/guider/: CMakeLists.txt
src/guider/include/: guider.h  straight_los.h
src/guider/src/: guider.cpp  straight_los.cpp
src/mavconn/: CMakeLists.txt
src/mavconn/include/mavconn/: interface.h  mavlink_dialect.h  msgbuffer.h  serial.h  tcp.h  udp.h
src/mavconn/src/: interface.cpp  mavlink_helpers.cpp  serial.cpp  tcp.cpp  udp.cpp
src/navigator/: CMakeLists.txt
src/navigator/include/: gps-ahrs_receiver.h
src/navigator/scripts/: xsen.py
src/navigator/src/: gps-ahrs_receiver.cpp
src/stm_transceiver/: CMakeLists.txt  setup_USB_CAN.txt
src/stm_transceiver/include/: can_transceiver.h
src/stm_transceiver/scripts/: can_transceiver.py  test.py
src/stm_transceiver/src/: can_transceiver.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: math.h
src/utils/msg/: BoardARM1Status.msg  BoardARM2Status.msg  KeyboardCommand.msg  MotorsCommand.msg  PistonStatus.msg  ThrusterStatus.msg
src/utils/srv/: SetMode.srv
